Brand color used for HTML background to avoid ugly color overlap on macOS/iOS scroll. Used gradient for start part of the page.

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color:rgb(126, 35, 221);
-$secondary-brand-color:rgb(126, 35, 221);
+$brand-color:#7e23dd;
+$secondary-brand-color:rgb(0, 0, 0);
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
